--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fg-loadcss": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-inline-source": "^1.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-rem": "^1.1.4",
