--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^6.7.2",
     "parcel-bundler": "^1.12.4",
     "postcss-modules": "^3.2.0",
+    "pug": "^3.0.0",
     "sass": "^1.26.10",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^19.0.0"
