--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "lint:js": "eslint src/js/**/*.js"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
     "eslint": "^7.7.0",
     "parcel-bundler": "^1.12.4",
     "postcss-modules": "^3.2.0",
+    "postcss-preset-env": "^6.7.0",
     "pug": "^3.0.0",
     "sass": "^1.26.10",
     "stylelint": "^13.6.1",
